--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
 
+:root {
+    --overlay-color: #03a9f4;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -72,7 +76,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: #03a9f4;
+    background: var(--overlay-color);
     mix-blend-mode: overlay;
 }
 
@@ -153,6 +157,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.menu ul {
+    position: relative;
+    list-style: none;
+}
+
+.menu ul li a {
+    text-decoration: none;
+    font-size: 24px;
+    color: #111;
+}
+
+.menu ul li a:hover {
+    color: var(--overlay-color)
 }
 
 @media(max-width: 991px) {
