--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -1,43 +1,9 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="Main and official site of Mezidia organization" />
-  <meta name="author" content="mezidia" />
-  <title>Mezidia official page</title>
-  <link rel="icon" type="image/x-icon" href="{% static 'assets/img/favicon.ico' %}" />
-  <!-- Font Awesome icons (free version)-->
-  <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
-  <!-- Google fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
-  <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
-  <!-- Core theme CSS (includes Bootstrap)-->
-  <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
-</head>
-<body id="page-top">
-  <!-- Navigation-->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-    <a class="navbar-brand js-scroll-trigger" href="https://github.com/mezidia" target="blank">
-      <span class="d-block d-lg-none">Mezidia</span>
-      <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{% static 'assets/img/MezidiaLogoTransparent.png' %}" alt="Profile image" /></span>
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
-        class="navbar-toggler-icon"></span></button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#members">Members</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#newMembers">New members</a></li>
-      </ul>
-    </div>
-  </nav>
+
+{% block title %}Mezidia{% endblock %}
+
+{% block content %}
   <!-- Page Content-->
   <div class="container-fluid p-0">
     <!-- About-->
@@ -272,12 +238,4 @@
       </div>
     </section>
   </div>
-  <!-- Bootstrap core JS-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Third party plugin JS-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-  <!-- Core theme JS-->
-  <script src="{% static 'js/scripts.js' %}"></script>
-</body>
-</html>
+{% endblock %}
