Add skills as template

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -160,45 +160,7 @@
       </div>
     </section>
     <hr class="m-0" />
-    <!-- Skills-->
-    <section class="resume-section" id="skills">
-      <div class="resume-section-content">
-        <h2 class="mb-5">Our Skills</h2>
-        <div class="subheading mb-3">Programming Languages & Tools</div>
-        <ul class="list-inline dev-icons">
-          <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-          <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-          <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-          <li class="list-inline-item"><i class="fab fa-react"></i></li>
-          <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-          <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-          <li class="list-inline-item"><i class="fab fa-python"></i></li>
-          <li class="list-inline-item"><i class="fab fa-unity"></i></li>
-          <li class="list-inline-item"><i class="fab fa-android"></i></li>
-          <li class="list-inline-item"><i class="fab fa-docker"></i></li>
-          <li class="list-inline-item"><i class="fab fa-php"></i></li>
-        </ul>
-        <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <span class="fa-li"><i class="fas fa-check"></i></span>
-            Responsive Design
-          </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-check"></i></span>
-            Cross Platfrom useful applications
-          </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-check"></i></span>
-            Modern technoligies
-          </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-check"></i></span>
-            Good feedback
-          </li>
-        </ul>
-      </div>
-    </section>
+    {% include 'main/includes/skills.html' %}
     <hr class="m-0" />
     <!-- Interests-->
     <section class="resume-section" id="interests">
