Create members include

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -89,76 +89,7 @@
       </div>
     </section>
     <hr class="m-0" />
-    <!-- Members -->
-    <section class="resume-section" id="members">
-      <div class="resume-section-content">
-        <h2 class="mb-5">Members</h2>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">Maxim Zavalniuk</h3>
-            <div class="subheading mb-3"><a href="https://github.com/mezgoodle" target="blank">@mezgoodle</a></div>
-            <div>I was born in Vinnytsia, where I received my primary education. I get my higher education in Kyiv, namely, at the NTUU "Igor Sikorsky KPI".</div>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">July 2020 - Present</span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">VsIG</h3>
-            <div class="subheading mb-3"><a href="https://github.com/VsIG-official" target="blank">@VsIG-official</a></div>
-            <div>Just small indie developer.</div>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">July 2020 - Present</span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">KERRIGAN</h3>
-            <div class="subheading mb-3"><a href="https://github.com/Dmytrenko-Roman" target="blank">@Dmytrenko-Roman</a></div>
-            <div>Queen of Blades.</div>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">July 2020 - Present</span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">fhrr-sht</h3>
-            <div class="subheading mb-3"><a href="https://github.com/fhrr-sht" target="blank">@fhrr-sht</a></div>
-            <div></div>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">September 2020 - Present</span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">Kostya</h3>
-            <div class="subheading mb-3"><a href="https://github.com/gazinaft" target="blank">@gazinaft</a></div>
-            <div>Reject modernity, embrace postmodernity</div>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">October 2020 - Present</span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">La7rodectus</h3>
-            <div class="subheading mb-3"><a href="https://github.com/La7rodectus" target="blank">@La7rodectus</a></div>
-            <div></div>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">September 2020 - Present</span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">lizardlynx</h3>
-            <div class="subheading mb-3"><a href="https://github.com/lizardlynx" target="blank">@lizardlynx</a></div>
-            <div></div>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">September 2020 - Present</span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">Nyukers</h3>
-            <div class="subheading mb-3"><a href="https://github.com/nyukers" target="blank">@nyukers</a></div>
-            <div></div>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">December 2020 - Present</span></div>
-        </div>
-      </div>
-    </section>
+    {% include 'main/includes/members.html' %}
     <hr class="m-0" />
     {% include 'main/includes/skills.html' %}
     <hr class="m-0" />
