Create projects include

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -26,68 +26,7 @@
       </div>
     </section>
     <hr class="m-0" />
-    <!-- Projects-->
-    <section class="resume-section" id="projects">
-      <div class="resume-section-content">
-        <h2 class="mb-5">Projects</h2>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <a class="h3 mb-0" href="https://github.com/mezidia/flask-jobs" target="blank">flask-jobs</a>
-            <div class="subheading mb-3">Flask REST-API </div>
-            <p>Test project for creating REST-API with Flask.</p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">August 2020 - Present</span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <a class="h3 mb-0" href="https://github.com/mezidia/hotel-booking" target="blank">hotel-booking</a>
-            <div class="subheading mb-3">C# project with databases</div>
-            <p>Educational project from the university.</p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">September 2020 - December 2020</span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <a class="h3 mb-0" target="blank" href="https://github.com/mezidia/roadmap">roadmap</a>
-            <div class="subheading mb-3">Organization roadmap</div>
-            <p>In this repository, you can find the official Mezidia public product roadmap. Our product roadmap is where you can learn about what features we're working on, what stage they're in, and when we expect to bring them to you.</p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">December 2020 - Present</span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <a class="h3 mb-0" href="https://github.com/mezidia/mezidia-jobs" target="blank">mezidia-jobs</a>
-            <div class="subheading mb-3">Portal where you can find job in Mezidia</div>
-            <p>Test project for creating REST-API with React-hooks.</p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">July 2020 - Present</span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <a class="h3 mb-0" href="https://github.com/mezidia/Shortcut" target="blank">Shortcut</a>
-            <div class="subheading mb-3">Dushila's project</div>
-            <p></p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">January 2021 - Present</span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <a class="h3 mb-0" href="https://github.com/mezidia/grechka.com" target="blank">grechka.com</a>
-            <div class="subheading mb-3">Site on NodeJS</div>
-            <p>The goal of this project is to create a website that helps customers find the best prices for buckwheat.</p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">January 2021 - Present</span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between">
-          <div class="flex-grow-1">
-            <a class="h3 mb-0" href="https://github.com/mezidia/mezidia" target="blank">mezidia</a>
-            <div class="subheading mb-3">General site of organization</div>
-            <p>Every organization has a website. So we made it too.</p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">January 2021 - Present</span></div>
-        </div>
-      </div>
-    </section>
+    {% include 'main/includes/projects.html' %}
     <hr class="m-0" />
     {% include 'main/includes/members.html' %}
     <hr class="m-0" />
