--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -4,70 +4,81 @@
 {% block title %}Mezidia{% endblock %}
 
 {% block content %}
-  <!-- Page Content-->
-  <div class="container-fluid p-0">
-    <!-- About-->
-    <section class="resume-section" id="about">
-      <div class="resume-section-content">
-        <h1 class="mb-0">
-          <span class="text-primary">ME</span>
-          <span class="head-animation">ZIDIA</span>
-        </h1>
-        <div class="subheading mb-5">
-          03056 Politekhnichna Street · Kyiv ·
-          <a href="mailto:mezgoodle@gmail.com">mezgoodle@gmail.com</a>
-        </div>
-        <p class="lead mb-5">We are the young organization of smart, creative and interesting people. Every day we learn something new, create and improve ourselves. We also like to have fun together and play. And We make applications for people.</p>
-        <div class="social-icons">
-          <a class="social-icon" href="https://github.com/mezidia" title="GitHub organization page" target="blank"><i class="fab fa-github"></i></a>
-          <a class="social-icon" href="https://t.me/sylvenis" title="Maxim Telegram profile" target="blank"><i class="fab fa-telegram"></i></a>
-          <a class="social-icon" href="https://www.facebook.com/profile.php?id=100005721694357" title="Maxim Facebook profile" target="blank"><i class="fab fa-facebook-f"></i></a>
-        </div>
-      </div>
-    </section>
-    <hr class="m-0" />
-    {% include 'main/includes/projects.html' %}
-    <hr class="m-0" />
-    {% include 'main/includes/members.html' %}
-    <hr class="m-0" />
-    {% include 'main/includes/skills.html' %}
-    <hr class="m-0" />
-    <!-- Interests-->
-    <section class="resume-section" id="interests">
-      <div class="resume-section-content">
-        <h2 class="mb-5">Interests</h2>
-        <p>Most of the members of the organization met at the university. We all love to create. We are different, but we find common interests: both at work and at leisure. We spend every day together. If we don't see each other, we meet online.</p>
-        <p class="mb-0">But everyone can tell more about themselves.</p>
-      </div>
-    </section>
-    <hr class="m-0" />
-    <!-- Awards -->
-    <section class="resume-section" id="awards">
-      <div class="resume-section-content">
-        <h2 class="mb-5">Awards & Certifications</h2>
-        <ul class="fa-ul mb-0">
-          <li>
-            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            Many <i>Coursera</i> courses from @VsIG and @gazinaft
-          </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            Hacktoberfest 2020
-          </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            INT20H
-          </li>
-        </ul>
-      </div>
-    </section>
-    <!-- New members -->
-    <section class="resume-section" id="newMembers">
-      <div class="resume-section-content">
-        <h2 class="mb-5">New members</h2>
-        <p>If you want to be the <strong>new member of this organization</strong>, write by email or Telegram in <i>About</i> section.</p>
-        <p class="mb-0">We have no requirements, only desire is important. You can learn all additional information from @mezgoodle.</p>
-      </div>
-    </section>
-  </div>
+    <!-- Page Content-->
+    <div class="container-fluid p-0">
+        <!-- About-->
+        <section class="resume-section" id="about">
+            <div class="resume-section-content">
+                <h1 class="mb-0">
+                    <span class="text-primary">ME</span>
+                    <span class="head-animation">ZIDIA</span>
+                </h1>
+                <div class="subheading mb-5">
+                    03056 Politekhnichna Street · Kyiv ·
+                    <a href="mailto:mezgoodle@gmail.com">mezgoodle@gmail.com</a>
+                </div>
+                <p class="lead mb-5">We are the young organization of smart, creative and interesting people. Every day
+                    we learn something new, create and improve ourselves. We also like to have fun together and play.
+                    And We make applications for people.</p>
+                <div class="social-icons">
+                    <a class="social-icon" href="https://github.com/mezidia" title="GitHub organization page"
+                       target="blank"><i class="fab fa-github"></i></a>
+                    <a class="social-icon" href="https://t.me/sylvenis" title="Maxim Telegram profile" target="blank"><i
+                            class="fab fa-telegram"></i></a>
+                    <a class="social-icon" href="https://www.facebook.com/profile.php?id=100005721694357"
+                       title="Maxim Facebook profile" target="blank"><i class="fab fa-facebook-f"></i></a>
+                </div>
+            </div>
+        </section>
+        <hr class="m-0"/>
+        {% include 'main/includes/projects.html' %}
+        <hr class="m-0"/>
+        {% include 'main/includes/members.html' %}
+        <hr class="m-0"/>
+        {% include 'main/includes/skills.html' %}
+        <hr class="m-0"/>
+        <!-- Interests-->
+        <section class="resume-section" id="interests">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Interests</h2>
+                <p>Most of the members of the organization met at the university. We all love to create. We are
+                    different, but we find common interests: both at work and at leisure. We spend every day together.
+                    If we don't see each other, we meet online.</p>
+                <p class="mb-0">But everyone can tell more about themselves.</p>
+            </div>
+        </section>
+        <hr class="m-0"/>
+        <!-- Awards -->
+        <section class="resume-section" id="awards">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Awards & Certifications</h2>
+                <ul class="fa-ul mb-0">
+                    <li>
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        Many <i>Coursera</i> courses from @VsIG and @gazinaft
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        Hacktoberfest 2020
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        INT20H
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!-- New members -->
+        <section class="resume-section" id="newMembers">
+            <div class="resume-section-content">
+                <h2 class="mb-5">New members</h2>
+                <p>If you want to be the <strong>new member of this organization</strong>, submit the form below. If you
+                    have additional questions, ask @mezgoodle in Telegram or write an email which is in <i>About</i>
+                    section.</p>
+                <p class="mb-0">We have no requirements, only desire is important. You can learn all additional
+                    information from @mezgoodle.</p>
+                {% include 'main/includes/form.html' %}
+            </div>
+        </section>
+    </div>
 {% endblock %}
