--- a/templates/main/includes/form.html
+++ b/templates/main/includes/form.html
@@ -1,4 +1,4 @@
-<form>
+<form class="pt-3">
     <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email address</label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
