--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -75,8 +75,7 @@
                 <p>If you want to be the <strong>new member of this organization</strong>, submit the form below. If you
                     have additional questions, ask @mezgoodle in Telegram or write an email which is in <i>About</i>
                     section.</p>
-                <p class="mb-0">We have no requirements, only desire is important. You can learn all additional
-                    information from @mezgoodle.</p>
+                <p class="mb-0">We have no requirements, only <i>desire is important</i>.</p>
                 {% include 'main/includes/form.html' %}
             </div>
         </section>
