Render form in HTML

--- a/templates/main/includes/form.html
+++ b/templates/main/includes/form.html
@@ -1,11 +1,9 @@
-<form class="pt-3">
-    <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-    </div>
-    <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-    </div>
+<form class="pt-3" method="post">
+    {% for field in form %}
+        {{ field.errors }}
+        <div class="mb-3">
+            {{ field.label_tag }} {{ field }}
+        </div>
+    {% endfor %}
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
