--- a/templates/main/includes/form.html
+++ b/templates/main/includes/form.html
@@ -1,5 +1,5 @@
 {% if sent %}
-    Your mail has been sended
+    Your mail has been sent!
 {% else %}
     <p>If you want to be the <strong>new member of this organization</strong>, submit the form below. If you
         have additional questions, ask @mezgoodle in Telegram or write an email which is in <i>About</i>
