--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -63,7 +63,7 @@
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        INT20H
+                        INT20H 2<sup>nd</sup> place
                     </li>
                 </ul>
             </div>
