--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Mezidia{% endblock %}
+{% block title %}Mezidia official page{% endblock %}
 
 {% block content %}
     <!-- Page Content-->
@@ -15,7 +15,7 @@
                 </h1>
                 <div class="subheading mb-5">
                     03056 Politekhnichna Street · Kyiv ·
-                    <a href="mailto:mezgoodle@gmail.com">mezgoodle@gmail.com</a>
+                    <a href="mailto:mezgoodle@gmail.com">mezidiaofficial@gmail.com</a>
                 </div>
                 <p class="lead mb-5">We are the young organization of smart, creative and interesting people. Every day
                     we learn something new, create and improve ourselves. We also like to have fun together and play.
